fixed a break in css

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -409,3 +409,149 @@ header {
   gap: 1.5rem;
   padding-left: 0;
 }
+
+/* Blogroll */
+.blogroll a {
+  text-decoration: none;
+}
+
+.blogpost a {
+  text-decoration-color: var(--text-color-link);
+  text-decoration-thickness: .150em;
+  text-underline-offset: 2px;
+  color: var(--text-color);
+}
+
+.blogroll:hover {
+  outline: 1px solid var(--text-color-link-active);
+  background-color: var(--text-color-link-active);
+  color: var(--background-color) !important;
+  text-decoration: none;
+}
+
+.blogpost:hover {
+  color: var(--text-color);
+  text-decoration-color: var(--text-color-link-active);
+  text-underline-offset: 4px;
+}
+
+/* Guestbook */
+input,
+textarea {
+  margin: 0 0 10px;
+  padding: 5px 10px;
+  color: var(--text-color) !important;
+  background: var(--background-color);
+  border: 2px solid var(--text-color-link-visited);
+  border-radius: 5px;
+  font-family: 'Departure';
+}
+input {
+  width: 55%;
+}
+textarea {
+  width: 95%;
+}
+input[type=button], input[type=submit], input[type=reset] {
+  margin: 0 0 20px;
+  width: 15%;
+  padding: 7px;
+  font-family: 'Departure';
+  font-weight: bold;
+  color: var(--background-color) !important;
+  background: var(--text-color-link-active);
+  border: 2px solid var(--text-color-link);
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#guestbooks___guestbook-messages-container blockquote {
+  margin: -5px 0 40px;
+  padding: 20px 30px;
+  color: var(--background-color);
+  background-color: var(--text-color-link-visited);
+
+}
+#guestbooks___guestbook-messages-header {
+  margin:25px 0;
+}
+#guestbooks___input-container {
+  color: var(--text-color);
+}
+#guestbooks___guestbook-messages-header::before {
+  margin-right: 8px;
+  content: '💬';
+}
+
+/* Markdown Alerts */
+.markdown-alert {
+  padding: 0.5rem 1rem;
+  margin-bottom: 16px;
+  color: var(--text-color-link-active);
+  border-left: .25em solid #888;
+  word-break: break-word;
+  text-wrap: balance;
+}
+
+.markdown-alert>:first-child {
+  margin-top: 0 !important;
+}
+
+.markdown-alert>:last-child {
+  margin-bottom: 0;
+}
+
+.markdown-alert .markdown-alert-title {
+  display: flex;
+  font-weight: 500;
+  align-items: center;
+  line-height: 1
+}
+
+.markdown-alert .markdown-alert-title .octicon {
+  margin-right: 0.5rem;
+  display: inline-block;
+  overflow: visible !important;
+  vertical-align: baseline;
+  fill: currentColor;
+}
+
+.markdown-alert.markdown-alert-note {
+  border-left-color: var(--color-note);
+}
+
+.markdown-alert.markdown-alert-note .markdown-alert-title {
+  color: var(--color-note);
+}
+
+.markdown-alert.markdown-alert-important {
+  border-left-color: var(--color-important);
+}
+
+.markdown-alert.markdown-alert-important .markdown-alert-title {
+  color: var(--color-important);
+}
+
+.markdown-alert.markdown-alert-warning {
+  border-left-color: var(--color-warning);
+}
+
+.markdown-alert.markdown-alert-warning .markdown-alert-title {
+  color: var(--color-warning);
+}
+
+.markdown-alert.markdown-alert-tip {
+  border-left-color: var(--color-tip);
+}
+
+.markdown-alert.markdown-alert-tip .markdown-alert-title {
+  color: var(--color-tip);
+}
+
+.markdown-alert.markdown-alert-caution {
+  border-left-color: var(--color-caution);
+}
+
+.markdown-alert.markdown-alert-caution .markdown-alert-title {
+  color: var(--color-caution);
+}
